vela-templates/addons/fluxcd/resource/network-policy/allow-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: flux-system
  name: allow-egress
  namespace: flux-system
spec:
  egress:
    - { }
  ingress:
    - from:
        - podSelector: { }
  podSelector: { }
  policyTypes:
    - Ingress
    - Egress
