vela-templates/addons/fluxcd/resource/network-policy/allow-scraping.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: flux-system
  name: allow-scraping
  namespace: flux-system
spec:
  ingress:
    - from:
        - namespaceSelector: { }
      ports:
        - port: 8080
          protocol: TCP
  podSelector: { }
  policyTypes:
    - Ingress
