vela-templates/addons/fluxcd/resource/network-policy/allow-webhooks.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: flux-system
  name: allow-webhooks
  namespace: flux-system
spec:
  ingress:
    - from:
        - namespaceSelector: { }
  podSelector:
    matchLabels:
      app: notification-controller
  policyTypes:
    - Ingress
